Linking all pages with their menus. Working on notification and message dropdown

--- a/complete-portfolio.html
+++ b/complete-portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Login- Hatchio</title>
+    <title>Add portfolio items- Hatchio</title>
     <meta name="description" content="Free themes for students, teachers, and public use in learning purpose. Made with Bootstrap 5.">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
@@ -37,41 +37,41 @@
 
                 <div class="check-timeline my-5 mx-5">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault">
                         Get Started
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                        <label class="form-check-label" for="flexCheckDefault2">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault2" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault2">
                         Expertise
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3">
-                        <label class="form-check-label" for="flexCheckDefault3">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault3" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault3">
                         Profile
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault4">
-                        <label class="form-check-label" for="flexCheckDefault4">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault4">
+                        <label class="form-check-label check-active" for="flexCheckDefault4">
                         Portfolio
                     </label>
                     </div>
@@ -134,59 +134,49 @@
                     </div>
 
                 </div>
-
-                <div class="mt-5">
-                    <h1>Portfolio</h1>
-                    <h6 class="text-muted mt-3">Add some interesting projects to showcase as casestudy.</h6>
-                </div>
-
-
-                <div class="row mt-5">
-                    <div class="col-md-4 add-to-portfolio" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        <i class="fa fa-plus mx-auto" aria-hidden="true"></i>
+                <form action="membership.html">
+                    <div class="mt-5">
+                        <h1>Portfolio</h1>
+                        <h6 class="text-muted mt-3">Add some interesting projects to showcase as casestudy.</h6>
                     </div>
-                    <div class="col-md-4">
-                        <div class="portfolio-container">
-                            <img src="assets/img/portfolio1.jpg" class="portfolio-sample img-fluid" alt="">
 
-                            <div class="portfolio-label">
-                                <h6 class="">Apple Web Design</h6>
+
+                    <div class="row mt-5">
+                        <div class="col-md-4 add-to-portfolio" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            <i class="fa fa-plus mx-auto" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="portfolio-container">
+                                <img src="assets/img/portfolio1.jpg" class="portfolio-sample img-fluid" alt="">
+
+                                <div class="portfolio-label">
+                                    <h6 class="">Apple Web Design</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
 
-                <div class="edit-profile-form py-5 ">
-                    <h3 class="mb-4">Personal Website</h3>
-                    <form>
+                    <div class="edit-profile-form py-5 ">
+                        <h3 class="mb-4">Personal Website</h3>
+
                         <div class="mb-3">
                             <label for="url" class="form-label text-muted"><h6>Website URL</h6></label>
                             <input class="form-control" type="url" placeholder="http://creorb.com" aria-label="default input example">
                         </div>
 
-                    </form>
 
-                </div>
-
+                    </div>
 
 
 
+                    <div class="clearfix">
+                        <a class="btn btn-light float-start py-3 px-5" href="complete-profile.html" role="button">Back</a>
 
+                        <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
 
-
-
-
-
-
-
-                <div class="clearfix">
-
-                    <button type="submit" class="btn btn-light float-start py-3 px-5">Back</button>
-                    <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
-
-                </div>
-
+                    </div>
+                </form>
             </div>
 
         </div>
