--- a/complete-profile.html
+++ b/complete-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Login- Hatchio</title>
+    <title>Complete your profile- Hatchio</title>
     <meta name="description" content="Free themes for students, teachers, and public use in learning purpose. Made with Bootstrap 5.">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
@@ -37,30 +37,30 @@
 
                 <div class="check-timeline my-5 mx-5">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault">
                         Get Started
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                        <label class="form-check-label" for="flexCheckDefault2">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault2" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault2">
                         Expertise
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3">
-                        <label class="form-check-label" for="flexCheckDefault3">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault3">
+                        <label class="form-check-label check-active" for="flexCheckDefault3">
                         Profile
                     </label>
                     </div>
@@ -134,31 +134,30 @@
                     </div>
 
                 </div>
-
-                <div class="mt-5">
-                    <h1>Profile</h1>
-                    <p class="text-muted mt-3">Set up your Hatchio presence and hiring needs.</p>
-                </div>
-
-
-                <div class="edit-profile py-5 d-flex align-items-center border-bottom">
-                    <div class="edit-profile-picture rounded-circle bg-light">
+                <form action="complete-portfolio.html">
+                    <div class="mt-5">
+                        <p class="text-muted mt-3">Set up your Hatchio presence and hiring needs.</p>
                     </div>
 
-                    <div class="profile-pic-details">
-                        <h4>Edit Profile Picture</h4>
-                        <p class="text-muted mb-4">Max.of 2mb. Recommended size: 280px 280px</p>
 
-                        <a href="#">
-                            <h6>Upload new picture</h6>
-                        </a>
+                    <div class="edit-profile py-5 d-flex align-items-center border-bottom">
+                        <div class="edit-profile-picture rounded-circle bg-light">
+                        </div>
+
+                        <div class="profile-pic-details">
+                            <h4>Edit Profile Picture</h4>
+                            <p class="text-muted mb-4">Max.of 2mb. Recommended size: 280px 280px</p>
+
+                            <a href="#">
+                                <h6>Upload new picture</h6>
+                            </a>
+                        </div>
                     </div>
-                </div>
 
 
 
-                <div class="edit-profile-form py-5 border-bottom">
-                    <form>
+                    <div class="edit-profile-form py-5 border-bottom">
+
                         <div class="mb-3">
                             <label for="title" class="form-label text-muted"><h6>Title</h6></label>
                             <input class="form-control" type="text" placeholder="Ex. Product Designer" aria-label="default input example">
@@ -167,116 +166,118 @@
                             <label for="title" class="form-label text-muted"><h6>Bio</h6></label>
                             <textarea class="form-control" id="bio" rows="3"></textarea>
                         </div>
-                    </form>
-
-                </div>
 
 
-                <div class="hourly-rate py-5 border-bottom">
-                    <h3 class="mb-4">Hourly Rate</h3>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <h6 class="text-muted">Your Hourly Rate</h6>
-                            <div class="input-group mb-3">
-                                <span class="input-group-text border-end-0 text-dark">$</span>
-                                <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                <span class="input-group-text">/hr</span>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <h6 class="text-muted">Hatchio Service Fee/ 5%</h6>
-                            <div class="input-group mb-3">
-                                <span class="input-group-text border-end-0 text-dark">$</span>
-                                <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                <span class="input-group-text">/hr</span>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <h6 class="">You’ll Receive</h6>
-                            <div class="input-group mb-3">
-                                <span class="input-group-text border-end-0 text-dark">$</span>
-                                <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                <span class="input-group-text">/hr</span>
-                            </div>
-                        </div>
                     </div>
 
-                </div>
 
-
-                <div class="experience border-bottom py-5">
-                    <h3 class="mb-4">Experience</h3>
-
-                    <div class="row g-3">
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Title</h6>
-                            <input type="text" class="form-control" placeholder="Ex. Product Designer" aria-label="City">
-                        </div>
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Company</h6>
-                            <input type="text" class="form-control" placeholder="Ex. Creorb Studio" aria-label="State">
-                        </div>
-
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Years of Experience</h6>
-                            <div class="input-group">
-                                <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
-
-                                <span class="input-group-text">0.00</span>
+                    <div class="hourly-rate py-5 border-bottom">
+                        <h3 class="mb-4">Hourly Rate</h3>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <h6 class="text-muted">Your Hourly Rate</h6>
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text border-end-0 text-dark">$</span>
+                                    <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                    <span class="input-group-text">/hr</span>
+                                </div>
                             </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Summary</h6>
-                            <input type="text" class="form-control" placeholder="Ex. Describe your Work Experience" aria-label="State">
+                            <div class="col-md-3">
+                                <h6 class="text-muted">Hatchio Service Fee/ 5%</h6>
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text border-end-0 text-dark">$</span>
+                                    <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                    <span class="input-group-text">/hr</span>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <h6 class="">You’ll Receive</h6>
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text border-end-0 text-dark">$</span>
+                                    <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)">
+                                    <span class="input-group-text">/hr</span>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
-                    <button type="submit" class="btn btn-light-blue mt-4 py-2 px-5">Add Experience</button>
-
-                </div>
 
 
-                <div class="education py-5">
-                    <h3 class="mb-4">Education</h3>
+                    <div class="experience border-bottom py-5">
+                        <h3 class="mb-4">Experience</h3>
 
-                    <div class="row g-3">
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Institution Name</h6>
-                            <input type="text" class="form-control" placeholder="Ex. Christ University" aria-label="City">
-                        </div>
-
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Years of Experience</h6>
-                            <div class="input-group">
-                                <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
-
-                                <span class="input-group-text">0.00</span>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Title</h6>
+                                <input type="text" class="form-control" placeholder="Ex. Product Designer" aria-label="City">
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Degree</h6>
-                            <input type="text" class="form-control" placeholder="Ex. MBA" aria-label="State">
-                        </div>
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Company</h6>
+                                <input type="text" class="form-control" placeholder="Ex. Creorb Studio" aria-label="State">
+                            </div>
 
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Years of Experience</h6>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
 
+                                    <span class="input-group-text">0.00</span>
+                                </div>
+                            </div>
 
-                        <div class="col-sm-6">
-                            <h6 class="text-muted">Country</h6>
-                            <input type="text" class="form-control" placeholder="Ex. London" aria-label="State">
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Summary</h6>
+                                <input type="text" class="form-control" placeholder="Ex. Describe your Work Experience" aria-label="State">
+                            </div>
+
                         </div>
+                        <button type="submit" class="btn btn-light-blue mt-4 py-2 px-5">Add Experience</button>
 
                     </div>
-                </div>
+
+
+                    <div class="education py-5">
+                        <h3 class="mb-4">Education</h3>
+
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Institution Name</h6>
+                                <input type="text" class="form-control" placeholder="Ex. Christ University" aria-label="City">
+                            </div>
+
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Years of Experience</h6>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
+
+                                    <span class="input-group-text">0.00</span>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Degree</h6>
+                                <input type="text" class="form-control" placeholder="Ex. MBA" aria-label="State">
+                            </div>
 
 
 
-                <div class="clearfix">
+                            <div class="col-sm-6">
+                                <h6 class="text-muted">Country</h6>
+                                <input type="text" class="form-control" placeholder="Ex. London" aria-label="State">
+                            </div>
 
-                    <button type="submit" class="btn btn-light float-start py-3 px-5">Back</button>
-                    <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
+                        </div>
+                    </div>
 
-                </div>
+
+
+                    <div class="clearfix">
+                        <a class="btn btn-light float-start py-3 px-5" href="expertise.html" role="button">Back</a>
+
+                        <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
+
+                    </div>
+
+                </form>
 
             </div>
 
