--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
                 <div class="login-area">
                     <h1 class="welcome-login-text mb-5">Login
                     </h1>
-                    <form>
+                    <form action="get-started.html">
                         <div class="mb-3">
 
-                            <input type="email" class="form-control p-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email/Username">
+                            <input type="email" class="form-control p-3" id="user_email" aria-describedby="emailHelp" placeholder="Email/Username">
 
                         </div>
                         <div class="mb-3">
 
-                            <input type="password" class="form-control p-3" id="exampleInputPassword1" placeholder="Password">
+                            <input type="password" class="form-control p-3" id="user_password" placeholder="Password">
                         </div>
 
                         <button type="submit" class="btn btn-primary primary-color w-100 p-3">Sign In</button>
