--- a/news-feed.html
+++ b/news-feed.html
@@ -106,9 +106,20 @@
 
                         <img src="assets/img/profile-avatar.png" class="small-avatar-image rounded shadow-cust ms-3 dropdown-toggle" alt="" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> View Profile</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-id-card"></i> Membership</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item">Balance : $8000 USD</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-money-check-alt"></i> Make a deposit</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-university"></i> Withdraw Earning</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#"><i class="fas fa-question-circle"></i> Support</a></li>
+                            <li><a class="dropdown-item text-danger" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                         </ul>
                     </div>
                     <div class="vertical-line-plus"></div>
