--- a/end-process.html
+++ b/end-process.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Login- Hatchio</title>
+    <title>Well Done- Hatchio</title>
     <meta name="description" content="Free themes for students, teachers, and public use in learning purpose. Made with Bootstrap 5.">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
@@ -37,63 +37,63 @@
 
                 <div class="check-timeline my-5 mx-5">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault">
                         Get Started
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                        <label class="form-check-label" for="flexCheckDefault2">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault2" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault2">
                         Expertise
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3">
-                        <label class="form-check-label" for="flexCheckDefault3">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault3" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault3">
                         Profile
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault4">
-                        <label class="form-check-label" for="flexCheckDefault4">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault4" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault4">
                         Portfolio
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault5">
-                        <label class="form-check-label" for="flexCheckDefault5">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault5" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault5">
                         Membership
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault6">
-                        <label class="form-check-label" for="flexCheckDefault6">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault6">
+                        <label class="form-check-label check-active" for="flexCheckDefault6">
                         Overview
                     </label>
                     </div>
@@ -134,139 +134,74 @@
                     </div>
 
                 </div>
+                <form action="news-feed-welcome.html">
+                    <div class="mt-5">
+                        <h1>Well Done. You all set to go</h1>
+                        <h6 class="text-muted mt-3">You’ll receive an email within 24 hours to let you know if you were accepted</h6>
 
-                <div class="mt-5">
-                    <h1>Well Done. You all set to go</h1>
-                    <h6 class="text-muted mt-3">You’ll receive an email within 24 hours to let you know if you were accepted</h6>
-
-                </div>
-
-                <div class="my-5">
-                    <div class="row">
-                        <div class="col-md-4 process">
-                            <!-- <img src="assets/img/svg/Frame.svg"> -->
-                            <h5 class="text-blue m-0"><i class="fas fa-asterisk mx-3"></i>Go Home</h5>
-                        </div>
-                        <div class="col-md-4 process">
-                            <!-- <img src="assets/img/svg/Frame.svg"> -->
-                            <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Browse Contests</h5>
-                        </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4 process">
-                            <!-- <img src="assets/img/svg/Frame.svg"> -->
-                            <h5 class="m-0"><i class="fa fa-briefcase mx-3" aria-hidden="true"></i>Find Jobs</h5>
-                        </div>
-                        <div class="col-md-4 process">
-                            <!-- <img src="assets/img/svg/Frame.svg"> -->
-                            <h5 class="m-0"><i class="fas fa-crown mx-3"></i>Check Leaderboard</h5>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4 process">
-                            <!-- <img src="assets/img/svg/Frame.svg"> -->
-                            <h5 class="m-0"><i class="fas fa-user mx-3"></i>Hire Freelancers</h5>
-                        </div>
-                        <div class="col-md-4 process">
-                            <!-- <img src="assets/img/svg/Frame.svg"> -->
-                            <h5 class="m-0"><i class="fas fa-calendar-day mx-3"></i>Events</h5>
-                        </div>
-                    </div>
-                </div>
 
-
-
-                <div class="community-social">
-                    <h4 class="mb-3">Join Community.</h4>
-                    <h6 class="mb-4"><span class="text-muted">You may refer to Hatchio article for more information on</span> <a href="#">Blog.</a></h6>
-                    <a href="#"><img src="assets/img/svg/facebook-o.svg" alt=""></a>
-                    <a href="#"><img src="assets/img/svg/twitter-o.svg" alt=""></a>
-                    <a href="#"><img src="assets/img/svg/in-o.svg" alt=""></a>
-                    <a href="#"><img src="assets/img/svg/youtube-o.svg" alt=""></a>
-                </div>
-
-
-
-
-
-
-
-
-
-                <div class="clearfix mt-5">
-
-                    <button type="submit" class="btn btn-light float-start py-3 px-5">Back</button>
-                    <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
-
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-
-
-
-
-
-
-    <!-- Modal -->
-    <div class="modal upload-work-modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-fullscreen">
-            <div class="modal-content">
-                <div class="modal-header border-0">
-                    <h4 class="modal-title" id="staticBackdropLabel">Your Portfolio Work.</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row justify-content-center">
-                        <div class="col-md-8">
-                            <div class="upload-drop-area">
-                                <div class="upload-info text-muted mx-auto">
-                                    <h6 class="">Darg file or upload a file</h6>
-                                    <p>PNG, GIF or JPG (RGB)</p>
-                                    <p>Maximum file size of 8mb</p>
-                                    <p>Minimum dimensions of 960px by 960px</p>
-                                    <p>Maximum dimensions of 2,040px by 20,400px</p>
-                                    <p>Check out how to use the cropping tool.</p>
-                                </div>
-
+                    <div class="my-5">
+                        <div class="row">
+                            <div class="col-md-4 process">
+                                <!-- <img src="assets/img/svg/Frame.svg"> -->
+                                <h5 class="text-blue m-0"><i class="fas fa-asterisk mx-3"></i>Go Home</h5>
+                            </div>
+                            <div class="col-md-4 process">
+                                <!-- <img src="assets/img/svg/Frame.svg"> -->
+                                <h5 class="m-0"><i class="fa fa-trophy mx-3" aria-hidden="true"></i>Browse Contests</h5>
                             </div>
                         </div>
-
-                        <div class="col-md-3 upload-desc-area">
-                            <h6 class="text-muted">Preview</h6>
-                            <div class="upload-image-preview"></div>
-                            <form action="">
-                                <div class="my-4 ">
-                                    <h6 class="text-muted">Description</h6>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Ex. Discribe about this project .." rows="3"></textarea>
-                                </div>
-
-                                <h4>Requirements</h4>
-                                <ul>
-                                    <li>I agree to the code of conduct.</li>
-                                    <li>I understand the Copyright issue.</li>
-                                </ul>
-
-                                <div class="form-check mt-4">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <h6 class="text-muted">
-                                        I understand and agree to the requirements.
-                                    </h6>
-                                </div>
-                                <div class="d-grid position-absolute bottom-0">
-                                    <button class="btn btn-primary primary-color py-3 px-5" type="button">Upload</button>
-
-                                </div>
-                            </form>
+                        <div class="row">
+                            <div class="col-md-4 process">
+                                <!-- <img src="assets/img/svg/Frame.svg"> -->
+                                <h5 class="m-0"><i class="fa fa-briefcase mx-3" aria-hidden="true"></i>Find Jobs</h5>
+                            </div>
+                            <div class="col-md-4 process">
+                                <!-- <img src="assets/img/svg/Frame.svg"> -->
+                                <h5 class="m-0"><i class="fas fa-crown mx-3"></i>Check Leaderboard</h5>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 process">
+                                <!-- <img src="assets/img/svg/Frame.svg"> -->
+                                <h5 class="m-0"><i class="fas fa-user mx-3"></i>Hire Freelancers</h5>
+                            </div>
+                            <div class="col-md-4 process">
+                                <!-- <img src="assets/img/svg/Frame.svg"> -->
+                                <h5 class="m-0"><i class="fas fa-calendar-day mx-3"></i>Events</h5>
+                            </div>
                         </div>
                     </div>
-                </div>
 
+
+
+                    <div class="community-social mb-5">
+                        <h4 class="mb-3">Join Community.</h4>
+                        <h6 class="mb-4"><span class="text-muted">You may refer to Hatchio article for more information on</span> <a href="#">Blog.</a></h6>
+                        <a href="#"><img src="assets/img/svg/facebook-o.svg" alt=""></a>
+                        <a href="#"><img src="assets/img/svg/twitter-o.svg" alt=""></a>
+                        <a href="#"><img src="assets/img/svg/in-o.svg" alt=""></a>
+                        <a href="#"><img src="assets/img/svg/youtube-o.svg" alt=""></a>
+                    </div>
+
+                    <div class="clearfix">
+                        <a class="btn btn-light float-start py-3 px-5" href="membership.html" role="button">Back</a>
+
+                        <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
+
+                    </div>
+                </form>
             </div>
+
         </div>
     </div>
+
+
+
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js?h=a436bee1e5ae414f98db7ca13adfd7c0"></script>
