--- a/expertise.html
+++ b/expertise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Login- Hatchio</title>
+    <title>Expertise- Hatchio</title>
     <meta name="description" content="Free themes for students, teachers, and public use in learning purpose. Made with Bootstrap 5.">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
     <link rel="icon" type="image/png" sizes="undefinedxundefined" href="assets/img/logo.png?h=3c553fe5b271aa3cbb9aa84caef3ff1c">
@@ -37,19 +37,19 @@
 
                 <div class="check-timeline my-5 mx-5">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault" checked>
+                        <label class="form-check-label check-active" for="flexCheckDefault">
                         Get Started
                     </label>
                     </div>
 
                     <div class="">
-                        <div class="vertical-connect"></div>
+                        <div class="vertical-connect check-active"></div>
                     </div>
 
                     <div class="form-check mt-1">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                        <label class="form-check-label" for="flexCheckDefault2">
+                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault2">
+                        <label class="form-check-label check-active" for="flexCheckDefault2">
                         Expertise
                     </label>
                     </div>
@@ -134,143 +134,145 @@
                     </div>
 
                 </div>
+                <form action="complete-profile.html">
+                    <div class="mt-5">
+                        <h1>Expertise</h1>
+                        <p class="text-muted mt-3">Tell us about the work you do</p>
+                    </div>
 
-                <div class="mt-5">
-                    <h1>Expertise</h1>
-                    <p class="text-muted mt-3">Tell us about the work you do</p>
-                </div>
-
-                <div class="mt-2 py-5 border-bottom main-services">
-                    <h5 class="mb-3">Main Services</h5>
+                    <div class="mt-2 py-5 border-bottom main-services">
+                        <h5 class="mb-3">Main Services</h5>
 
 
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off">Design & Creative</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Programming & Tech</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Writing & Translation</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">3D & Animation</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Music & Video</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Sales & Marketing</button>
-                    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Lifestyle & Photography</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off">Design & Creative</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Programming & Tech</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Writing & Translation</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">3D & Animation</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Music & Video</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Sales & Marketing</button>
+                        <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Lifestyle & Photography</button>
 
-                </div>
+                    </div>
 
-                <div class="design-n-creative py-5">
-                    <h3 class="mb-5">Design & Creative</h3>
+                    <div class="design-n-creative py-5">
+                        <h3 class="mb-5">Design & Creative</h3>
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="graphic_design">
-                                <label class="form-check-label h6" for="graphic_design">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="graphic_design">
+                                    <label class="form-check-label h6" for="graphic_design">
                                     Graphic Design
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="web_design">
-                                <label class="form-check-label h6" for="web_design">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="web_design">
+                                    <label class="form-check-label h6" for="web_design">
                                     Web Design
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="mobile_app_design">
-                                <label class="form-check-label h6" for="mobile_app_design">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="mobile_app_design">
+                                    <label class="form-check-label h6" for="mobile_app_design">
                                     Mobile App Design
                                 </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="interior_design">
-                                <label class="form-check-label h6" for="interior_design">
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="interior_design">
+                                    <label class="form-check-label h6" for="interior_design">
                                     Interior Design
                                 </label>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-md-6">
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="user_experience_design">
-                                <label class="form-check-label h6" for="user_experience_design">
+                            <div class="col-md-6">
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="user_experience_design">
+                                    <label class="form-check-label h6" for="user_experience_design">
                                     User Experience Design
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="user_interface_design">
-                                <label class="form-check-label h6" for="user_interface_design">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="user_interface_design">
+                                    <label class="form-check-label h6" for="user_interface_design">
                                     User Interface Design
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="photoshop">
-                                <label class="form-check-label h6" for="photoshop">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="photoshop">
+                                    <label class="form-check-label h6" for="photoshop">
                                     Photoshop
                                 </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="illustrator">
-                                <label class="form-check-label h6" for="illustrator">
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="illustrator">
+                                    <label class="form-check-label h6" for="illustrator">
                                     Illustrator
                                 </label>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
 
-                <div class="design-n-creative py-5">
-                    <h3 class="mb-5">3D & Animation</h3>
+                    <div class="design-n-creative py-5">
+                        <h3 class="mb-5">3D & Animation</h3>
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="three_d_model">
-                                <label class="form-check-label h6" for="three_d_model">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="three_d_model">
+                                    <label class="form-check-label h6" for="three_d_model">
                                     3D Model
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="three_d_resp">
-                                <label class="form-check-label h6" for="three_d_resp">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="three_d_resp">
+                                    <label class="form-check-label h6" for="three_d_resp">
                                     3D Rendering
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="animation">
-                                <label class="form-check-label h6" for="animation">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="animation">
+                                    <label class="form-check-label h6" for="animation">
                                     Animation
                                 </label>
+                                </div>
+
                             </div>
 
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="two_d_annim">
-                                <label class="form-check-label h6" for="two_d_annim">
+                            <div class="col-md-6">
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="two_d_annim">
+                                    <label class="form-check-label h6" for="two_d_annim">
                                     2d Animation
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="unity">
-                                <label class="form-check-label h6" for="unity">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="unity">
+                                    <label class="form-check-label h6" for="unity">
                                     Unity
                                 </label>
-                            </div>
-                            <div class="form-check mb-2">
-                                <input class="form-check-input" type="checkbox" value="" id="game_design">
-                                <label class="form-check-label h6" for="game_design">
+                                </div>
+                                <div class="form-check mb-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="game_design">
+                                    <label class="form-check-label h6" for="game_design">
                                     Game Design
                                 </label>
-                            </div>
+                                </div>
 
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="clearfix">
+                    <div class="clearfix">
+                        <a class="btn btn-light float-start py-3 px-5" href="get-started.html" role="button">Back</a>
 
-                    <button type="submit" class="btn btn-light float-start py-3 px-5">Back</button>
-                    <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
+                        <button type="submit" class="btn btn-primary float-end primary-color py-3 px-5">Continue</button>
 
-                </div>
+                    </div>
+
+                </form>
 
             </div>
 
