--- a/get-started.html
+++ b/get-started.html
@@ -36,8 +36,8 @@
 
                 <div class="check-timeline my-5 mx-5">
                     <div class="form-check">
-                        <input class="form-check-input check-active" type="checkbox" value="" id="flexCheckDefault" checked>
-                        <label class="form-check-label check-active" for="flexCheckDefault">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
                         Get Started
                     </label>
                     </div>
