--- a/signup.html
+++ b/signup.html
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="col-md-12">
-                        <p>Already have an account? <a href="login.html">Sign In</a></p>
+                        <p>Already have an account? <a href="index.html">Sign In</a></p>
                     </div>
                 </div>
             </div>
